# nmpde-projects-Bettonte-Lacagnina-Lentini

./: CMakeLists.txt  README.md
include/: BrainRegions.hpp  FisherKolmogorov.hpp  FisherKolmogorov1D.hpp
include/src/: FisherKolmogorov.cpp  main.cpp  plot.py
mesh/: Makefile  brain-h3.0.geo  mesh1D.geo  new_ellipse.geo
src/: BrainRegions.hpp  FisherKolmogorov.cpp  FisherKolmogorov.hpp  FisherKolmogorov1D.cpp  FisherKolmogorov1D.hpp  SeedingRegions.hpp  main.cpp  main1D.cpp
